<resources>
    <string name="app_name">Lab6</string>
    <string name="hello_message">"Hello World!"</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login">Login</string>
    <string name="loginText">Login Name</string>
    <string name="password">Password</string>
    <string name="radioButton">RadioButton</string>
    <string name="checkBox">CheckBox</string>
    <string name="switchText">What does this do?</string>
    <string name="dialog_message">Do you want to finish this activity?</string>
    <string name="dialog_title">Notice</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="chat_button">Start Chat</string>
    <string name="send_text">Send</string>
    <string name="weatherText">Forecast</string>

</resources>
