<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.dean.androidlabs.ListItemsActivity"
    android:rowCount="2"
    android:columnCount="2">
    <RadioButton
        android:layout_column="0"
        android:text="@string/radioButton"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:gravity="fill"
        />

    <CheckBox
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/checkBox"
        />

    <Switch
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/switchText"
        />

    <ImageButton
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:gravity="fill"
        android:src="@android:drawable/ic_menu_camera" />


</GridLayout>
